# bobo-musu

./: Dockerfile  Dockerfile.old  GUIDE.md  MILESTONE_1.md  Procfile  app.json  main.tf  variables.tf
3dm files/: To Do.docx  casting_merge.py  fingerprint_displace.py
3dm files/designer info/: Finger-print presentation-DNJ.pptx
3dm files/tests/: conftest.py  test_casting.py  test_core.py  test_integration.py
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/cpp/opennurbs/: opennurbs_public.sln  opennurbs_textlog.h
android/app/src/main/cpp/opennurbs/example_read/: example_read.cpp
android/app/src/main/cpp/opennurbs/zlib/: zlib.vcxproj
automation-tool/: jewel.html  jewel.js
backend/: designs.json  manage.py  pyproject.toml
backend/bobomusu/: asgi.py  settings.py  urls.py  wsgi.py
backend/designs/: PDG040.3dm
backend/preview/: design_registry.py  pipeline.py  urls.py  views.py
backend/preview/tests/: conftest.py  test_api_designs.py  test_api_preview.py  test_cleanup.py  test_concurrent.py  test_design_registry.py  test_determinism.py  test_end_to_end.py  test_error_handling.py  test_frontend_smoke.py  test_mesh_properties.py  test_parametric.py  test_pipeline_integration.py  test_stl_integrity.py  test_stress.py  test_upload_validation.py
backend/static/: app.js  index.html  style.css
backend/static/meshes/: P246_base.glb  P246_gems.glb  PDG040_base.glb
backend_old/: .env.example  .gitignore  Pipfile  README.md  manage.py
backend_old/bobo_musu_3479/: settings.py  shopify.py  shopify_storefront.py  urls.py  wsgi.py
backend_old/dashboard/: urls.py  views.py
backend_old/home/: functions.py  models.py  urls.py  views.py
backend_old/shopify_admin/: admin.py  apps.py  models.py  shopify.py  urls.py  views.py
backend_old/shopify_app/: apps.py  context_processors.py  urls.py  views.py
backend_old/shopify_store/: admin.py  apps.py  functions.py  models.py  shopify.py  shopify_store_admin.py  signals.py  urls.py  urls_shopify_web.py  views.py  views_shopify_web.py
backend_old/users/: mixins.py
frontend/: README.md  app.json
iOS/: Podfile  README.md
rn-app/: .gitignore  App.js  index.js  package-lock.json  package.json
web/: .gitignore  README.md
(+605 files in other folders)
